--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </div>
     </header>
-
+  <div class="wrapper">
     <section id="featured-property">
       <figure>
         <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
@@ -45,7 +45,9 @@
       <h3>Company News</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, inventore, vero, rerum ullam nihil sapiente tempora molestias quis ducimus opsum laborum vel. Tempore perspiciatis ea error dignissimos libero recesandae explicabo.</p>
     </section>
+  </div>
     <section id="details">
+      <div class="wrapper">
       <div>
         <h3>Contact</h3>
         <p>
@@ -77,6 +79,7 @@
           <a href="#" target="_blank">Twitter</a>
         </p>
       </div>
+    </div>
     </section>
 
     <footer>
